--- a/1 - Natural Language Processing with Classification and Vector Spaces/Labs/Week 1/C1_W1_Assignment.ipynb
+++ b/1 - Natural Language Processing with Classification and Vector Spaces/Labs/Week 1/C1_W1_Assignment.ipynb
@@ -152,11 +152,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "train_y.shape = (8000, 1)\n",
-      "test_y.shape = (2000, 1)\n"
+      "train_y.shape = (8000, 1)\ntest_y.shape = (2000, 1)\n"
      ]
     }
    ],
@@ -194,11 +193,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "type(freqs) = <class 'dict'>\n",
-      "len(freqs) = 11346\n"
+      "type(freqs) = <class 'dict'>\nlen(freqs) = 11340\n"
      ]
     }
    ],
@@ -236,14 +234,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "This is an example of a positive tweet: \n",
-      " #FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)\n",
-      "\n",
-      "This is an example of the processed version of the tweet: \n",
-      " ['followfriday', 'top', 'engag', 'member', 'commun', 'week', ':)']\n"
+      "This is an example of a positive tweet: \n #FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)\n\nThis is an example of the processed version of the tweet: \n ['followfriday', 'top', 'engag', 'member', 'commun', 'week', ':)']\n"
      ]
     }
    ],
@@ -339,11 +333,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "SUCCESS!\n",
-      "CORRECT!\n"
+      "SUCCESS!\nCORRECT!\n"
      ]
     }
    ],
@@ -406,14 +399,14 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "9.210340371976294"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
@@ -430,22 +423,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "9.210340371976182"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
    "source": [
-    "# verify that when the model predicts close to 0 but the actual label is 0, the loss is a large positive value\n",
+    "# verify that when the model predicts close to 0 but the actual label is 1, the loss is a large positive value\n",
     "-1 * np.log(0.0001) # loss is about 9.2"
    ]
   },
@@ -517,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,15 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The cost after training is 0.67094970.\n",
-      "The resulting vector of weights is [4.1e-07, 0.00035658, 7.309e-05]\n"
+      "The cost after training is 0.67094970.\nThe resulting vector of weights is [4.1e-07, 0.00035658, 7.309e-05]\n"
      ]
     }
    ],
@@ -635,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,12 +666,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[[1.00e+00 3.02e+03 6.10e+01]]\n"
      ]
@@ -706,12 +698,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[[1. 0. 0.]]\n"
      ]
@@ -749,15 +741,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The cost after training is 0.24216529.\n",
-      "The resulting vector of weights is [7e-08, 0.0005239, -0.00055517]\n"
+      "The cost after training is 0.24216477.\nThe resulting vector of weights is [7e-08, 0.0005239, -0.00055517]\n"
      ]
     }
    ],
@@ -808,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,20 +828,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "I am happy -> 0.518580\n",
-      "I am bad -> 0.494339\n",
-      "this movie should have been great. -> 0.515331\n",
-      "great -> 0.515464\n",
-      "great great -> 0.530898\n",
-      "great great great -> 0.546273\n",
-      "great great great great -> 0.561561\n"
+      "I am happy -> 0.518580\nI am bad -> 0.494339\nthis movie should have been great. -> 0.515331\ngreat -> 0.515464\ngreat great -> 0.530898\ngreat great great -> 0.546273\ngreat great great great -> 0.561561\n"
      ]
     }
    ],
@@ -878,18 +863,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[0.81636424]])"
+       "array([[0.81636482]])"
       ]
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 24
     }
    ],
    "source": [
@@ -930,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,12 +957,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Logistic regression model's accuracy = 0.9950\n"
      ]
@@ -1008,39 +993,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Label Predicted Tweet\n",
       "THE TWEET IS: @jaredNOTsubway @iluvmariah @Bravotv Then that truly is a LATERAL move! Now, we all know the Queen Bee is UPWARD BOUND : ) #MovingOnUp\n",
       "THE PROCESSED TWEET IS: ['truli', 'later', 'move', 'know', 'queen', 'bee', 'upward', 'bound', 'movingonup']\n",
-      "1\t0.49996890\tb'truli later move know queen bee upward bound movingonup'\n",
+      "1\t0.49996897\tb'truli later move know queen bee upward bound movingonup'\n",
       "THE TWEET IS: @MarkBreech Not sure it would be good thing 4 my bottom daring 2 say 2 Miss B but Im gonna be so stubborn on mouth soaping ! #NotHavingit :p\n",
       "THE PROCESSED TWEET IS: ['sure', 'would', 'good', 'thing', '4', 'bottom', 'dare', '2', 'say', '2', 'miss', 'b', 'im', 'gonna', 'stubborn', 'mouth', 'soap', 'nothavingit', ':p']\n",
-      "1\t0.48622857\tb'sure would good thing 4 bottom dare 2 say 2 miss b im gonna stubborn mouth soap nothavingit :p'\n",
+      "1\t0.48650628\tb'sure would good thing 4 bottom dare 2 say 2 miss b im gonna stubborn mouth soap nothavingit :p'\n",
       "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots\n",
       "http://t.co/UGQzOx0huu\n",
       "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
-      "1\t0.48370665\tb\"i'm play brain dot braindot\"\n",
+      "1\t0.48370676\tb\"i'm play brain dot braindot\"\n",
       "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots http://t.co/aOKldo3GMj http://t.co/xWCM9qyRG5\n",
       "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
-      "1\t0.48370665\tb\"i'm play brain dot braindot\"\n",
+      "1\t0.48370676\tb\"i'm play brain dot braindot\"\n",
       "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots http://t.co/R2JBO8iNww http://t.co/ow5BBwdEMY\n",
       "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
-      "1\t0.48370665\tb\"i'm play brain dot braindot\"\n",
+      "1\t0.48370676\tb\"i'm play brain dot braindot\"\n",
       "THE TWEET IS: off to the park to get some sunlight : )\n",
       "THE PROCESSED TWEET IS: ['park', 'get', 'sunlight']\n",
-      "1\t0.49578765\tb'park get sunlight'\n",
+      "1\t0.49578773\tb'park get sunlight'\n",
       "THE TWEET IS: @msarosh Uff Itna Miss karhy thy ap :p\n",
       "THE PROCESSED TWEET IS: ['uff', 'itna', 'miss', 'karhi', 'thi', 'ap', ':p']\n",
-      "1\t0.48199810\tb'uff itna miss karhi thi ap :p'\n",
+      "1\t0.48199817\tb'uff itna miss karhi thi ap :p'\n",
       "THE TWEET IS: @phenomyoutube u probs had more fun with david than me : (\n",
       "THE PROCESSED TWEET IS: ['u', 'prob', 'fun', 'david']\n",
-      "0\t0.50020353\tb'u prob fun david'\n",
+      "0\t0.50020361\tb'u prob fun david'\n",
       "THE TWEET IS: pats jay : (\n",
       "THE PROCESSED TWEET IS: ['pat', 'jay']\n",
       "0\t0.50039294\tb'pat jay'\n",
@@ -1078,16 +1063,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "['ridicul', 'bright', 'movi', 'plot', 'terribl', 'sad', 'end']\n",
-      "[[0.48139087]]\n",
-      "Negative sentiment\n"
+      "['ridicul', 'bright', 'movi', 'plot', 'terribl', 'sad', 'end']\n[[0.48139091]]\nNegative sentiment\n"
      ]
     }
    ],
@@ -1102,6 +1085,13 @@
     "else: \n",
     "    print('Negative sentiment')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1111,9 +1101,8 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1125,7 +1114,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
+  },
+  "interpreter": {
+   "hash": "afe10384bc96672f7d25546e65fa980647df1f26515facfa908b198f5b5b8385"
   }
  },
  "nbformat": 4,
