--- a/1 - Natural Language Processing with Classification and Vector Spaces/Labs/Week 2/C1_W2_Assignment.ipynb
+++ b/1 - Natural Language Processing with Classification and Vector Spaces/Labs/Week 2/C1_W2_Assignment.ipynb
@@ -107,8 +107,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "['hello', 'great', 'day', ':)', 'good', 'morn']\n"
      ]
@@ -208,14 +208,14 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{('happi', 1): 1, ('trick', 0): 1, ('sad', 0): 1, ('tire', 0): 2}"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,9 +413,11 @@
     "\n",
     "    # Calculate D_pos, the number of positive documents\n",
     "    D_pos = (len(list(filter(lambda x: x > 0, train_y))))\n",
+    "    \n",
     "\n",
     "    # Calculate D_neg, the number of negative documents\n",
     "    D_neg = (len(list(filter(lambda x: x <= 0, train_y))))\n",
+    "    \n",
     "\n",
     "    # Calculate logprior\n",
     "    logprior = np.log(D_pos) - np.log(D_neg)\n",
@@ -440,15 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "0.0\n",
-      "9089\n"
+      "0.0\n9085\n"
      ]
     }
    ],
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,14 +537,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The expected output is 1.5740278623499175\n"
+      "The expected output is 1.5737794405738943\n"
      ]
     }
    ],
@@ -580,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,12 +625,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Naive Bayes accuracy = 0.9940\n"
      ]
@@ -651,20 +652,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "I am happy -> 2.15\n",
-      "I am bad -> -1.29\n",
-      "this movie should have been great. -> 2.14\n",
-      "great -> 2.14\n",
-      "great great -> 4.28\n",
-      "great great great -> 6.41\n",
-      "great great great great -> 8.55\n"
+      "I am happy -> 2.15\nI am bad -> -1.29\nthis movie should have been great. -> 2.14\ngreat -> 2.14\ngreat great -> 4.28\ngreat great great -> 6.41\ngreat great great great -> 8.55\n"
      ]
     }
    ],
@@ -696,18 +691,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "-8.801622640492191"
+       "-8.802119484044237"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 20
     }
    ],
    "source": [
@@ -798,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,18 +822,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'positive': 161, 'negative': 18, 'ratio': 8.526315789473685}"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 22
     }
    ],
    "source": [
@@ -865,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,10 +907,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{':(': {'positive': 1, 'negative': 3663, 'ratio': 0.0005458515283842794},\n",
@@ -933,9 +929,8 @@
        " 'ｍｅ': {'positive': 0, 'negative': 35, 'ratio': 0.027777777777777776}}"
       ]
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 24
     }
    ],
    "source": [
@@ -945,10 +940,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'followfriday': {'positive': 23, 'negative': 0, 'ratio': 24.0},\n",
@@ -975,9 +971,8 @@
        " 'pleasur': {'positive': 10, 'negative': 0, 'ratio': 11.0}}"
       ]
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 25
     }
    ],
    "source": [
@@ -1003,12 +998,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Truth Predicted Tweet\n",
       "1\t0.00\tb''\n",
@@ -1047,14 +1042,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "9.574768961173339\n"
+      "9.57402369584527\n"
      ]
     }
    ],
@@ -1082,9 +1077,8 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1096,7 +1090,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
+  },
+  "interpreter": {
+   "hash": "afe10384bc96672f7d25546e65fa980647df1f26515facfa908b198f5b5b8385"
   }
  },
  "nbformat": 4,
