--- a/1 - Natural Language Processing with Classification and Vector Spaces/Labs/Week 3/NLP_C1_W3_lecture_nb_01.ipynb
+++ b/1 - Natural Language Processing with Classification and Vector Spaces/Labs/Week 3/NLP_C1_W3_lecture_nb_01.ipynb
@@ -57,13 +57,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[1, 2, 3, 4, 5]\n",
-      "[1 2 3 4]\n",
-      "<class 'list'>\n",
-      "<class 'numpy.ndarray'>\n"
+      "[1, 2, 3, 4, 5]\n[1 2 3 4]\n<class 'list'>\n<class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -86,15 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[2 4 6 8]\n",
-      "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
+      "[2 4 6 8]\n[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -112,15 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[ 3  6  9 12]\n",
-      "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
+      "[ 3  6  9 12]\n[1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -152,22 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[[1 2 3 4]\n",
-      " [1 2 3 4]\n",
-      " [1 2 3 4]]\n",
-      "[[1 2 3 4 5]\n",
-      " [1 2 3 4 5]\n",
-      " [1 2 3 4 5]]\n",
-      "[[1 2 3 4]\n",
-      " [1 1 1 1]\n",
-      " [1 2 3 4]]\n"
+      "[[1 2 3 4]\n [1 2 3 4]\n [1 2 3 4]]\n[[1 2 3 4 5]\n [1 2 3 4 5]\n [1 2 3 4 5]]\n[[1 2 3 4]\n [1 1 1 1]\n [1 2 3 4]]\n"
      ]
     }
    ],
@@ -192,17 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[[1 2]\n",
-      " [3 4]]\n",
-      "[[2 4]\n",
-      " [6 8]]\n"
+      "[[1 2]\n [3 4]]\n[[2 4]\n [6 8]]\n"
      ]
     }
    ],
@@ -216,15 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[list([1, 2]) list([3, 4]) list([5, 6, 7])]\n",
-      "[list([1, 2, 1, 2]) list([3, 4, 3, 4]) list([5, 6, 7, 5, 6, 7])]\n"
+      "[list([1, 2, 1, 2]) list([3, 4, 3, 4]) list([5, 6, 7, 5, 6, 7])]\n",
+      "<ipython-input-9-79d0aa209f40>:3: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  badmatrix = np.array([[1, 2], [3, 4], [5, 6, 7]]) # Define a matrix. Note the third row contains 3 elements\n"
      ]
     }
    ],
@@ -249,15 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[[3 5]\n",
-      " [7 9]]\n"
+      "[[3 5]\n [7 9]]\n"
      ]
     }
    ],
@@ -269,17 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[[2 4]\n",
-      " [6 8]]\n",
-      "[[0 0]\n",
-      " [0 0]]\n"
+      "[[2 4]\n [6 8]]\n[[0 0]\n [0 0]]\n"
      ]
     }
    ],
@@ -303,15 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[[ 1  4]\n",
-      " [ 9 16]]\n"
+      "[[ 1  4]\n [ 9 16]]\n"
      ]
     }
    ],
@@ -333,20 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Original matrix 3 x 2\n",
-      "[[1 2]\n",
-      " [3 4]\n",
-      " [5 6]]\n",
-      "Transposed matrix 2 x 3\n",
-      "[[1 3 5]\n",
-      " [2 4 6]]\n"
+      "Original matrix 3 x 2\n[[1 2]\n [3 4]\n [5 6]]\nTransposed matrix 2 x 3\n[[1 3 5]\n [2 4 6]]\n"
      ]
     }
    ],
@@ -367,17 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Original array\n",
-      "[1 2 3 4]\n",
-      "Transposed array\n",
-      "[1 2 3 4]\n"
+      "Original array\n[1 2 3 4]\nTransposed array\n[1 2 3 4]\n"
      ]
     }
    ],
@@ -398,20 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Original array\n",
-      "[[1 2 3 4]]\n",
-      "Transposed array\n",
-      "[[1]\n",
-      " [2]\n",
-      " [3]\n",
-      " [4]]\n"
+      "Original array\n[[1 2 3 4]]\nTransposed array\n[[1]\n [2]\n [3]\n [4]]\n"
      ]
     }
    ],
@@ -477,11 +443,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[3.74165739 3.74165739]\n",
-      "[1.41421356 2.82842712 4.24264069]\n"
+      "[3.74165739 3.74165739]\n[1.41421356 2.82842712 4.24264069]\n"
      ]
     }
    ],
@@ -521,13 +486,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "38\n",
-      "38\n",
-      "38\n",
-      "38\n"
+      "38\n38\n38\n38\n"
      ]
     }
    ],
@@ -565,8 +527,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "11 = 11\n"
      ]
@@ -606,13 +568,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Sum by columns: \n",
-      "[ 6 -6]\n",
-      "Sum by rows:\n",
-      "[0 0 0]\n"
+      "Sum by columns: \n[ 6 -6]\nSum by rows:\n[0 0 0]\n"
      ]
     }
    ],
@@ -644,15 +603,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Matrix mean: \n",
-      "0.0\n",
-      "Mean by columns: \n",
-      "[ 2. -2.]\n",
-      "Mean by rows:\n",
-      "[0. 0. 0.]\n"
+      "Matrix mean: \n0.0\nMean by columns: \n[ 2. -2.]\nMean by rows:\n[0. 0. 0.]\n"
      ]
     }
    ],
@@ -684,23 +638,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Original matrix\n",
-      "[[1 1]\n",
-      " [2 2]\n",
-      " [3 3]]\n",
-      "Centered by columns matrix\n",
-      "[[-1. -1.]\n",
-      " [ 0.  0.]\n",
-      " [ 1.  1.]]\n",
-      "New mean by column\n",
-      "[0. 0.]\n"
+      "Original matrix\n[[1 1]\n [2 2]\n [3 3]]\nCentered by columns matrix\n[[-1. -1.]\n [ 0.  0.]\n [ 1.  1.]]\nNew mean by column\n[0. 0.]\n"
      ]
     }
    ],
@@ -729,23 +674,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Original matrix\n",
-      "[[1 3]\n",
-      " [2 4]\n",
-      " [3 5]]\n",
-      "Centered by columns matrix\n",
-      "[[-1.  1.]\n",
-      " [-1.  1.]\n",
-      " [-1.  1.]]\n",
-      "New mean by rows\n",
-      "[0. 0. 0.]\n"
+      "Original matrix\n[[1 3]\n [2 4]\n [3 5]]\nCentered by columns matrix\n[[-1.  1.]\n [-1.  1.]\n [-1.  1.]]\nNew mean by rows\n[0. 0. 0.]\n"
      ]
     }
    ],
@@ -773,12 +709,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "3.0  ==  3.0\n"
      ]
@@ -805,9 +741,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -819,7 +754,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
+  },
+  "interpreter": {
+   "hash": "afe10384bc96672f7d25546e65fa980647df1f26515facfa908b198f5b5b8385"
   }
  },
  "nbformat": 4,
