--- a/2 - Natural Language Processing with Probabilistic Models/Labs/Week 1/NLP_C2_W1_lecture_nb_02.ipynb
+++ b/2 - Natural Language Processing with Probabilistic Models/Labs/Week 1/NLP_C2_W1_lecture_nb_02.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# NLP Course 2 Week 1 Lesson : Building The Model - Lecture Exercise 02\n",
     "Estimated Time: 20 minutes\n",
@@ -11,137 +10,203 @@
     "Create a list of candidate strings by applying an edit operation\n",
     "<br>\n",
     "### Imports and Data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
-    "# data\n",
+    "# data\r\n",
     "word = 'dearz' # 🦌"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Splits\n",
     "Find all the ways you can split a word into 2 parts !"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
-    "# splits with a loop\n",
-    "splits_a = []\n",
-    "for i in range(len(word)+1):\n",
-    "    splits_a.append([word[:i],word[i:]])\n",
-    "\n",
-    "for i in splits_a:\n",
+    "# splits with a loop\r\n",
+    "splits_a = []\r\n",
+    "for i in range(len(word)+1):\r\n",
+    "    splits_a.append([word[:i],word[i:]])\r\n",
+    "\r\n",
+    "for i in splits_a:\r\n",
     "    print(i)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['', 'dearz']\n",
+      "['d', 'earz']\n",
+      "['de', 'arz']\n",
+      "['dea', 'rz']\n",
+      "['dear', 'z']\n",
+      "['dearz', '']\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
-    "# same splits, done using a list comprehension\n",
-    "splits_b = [(word[:i], word[i:]) for i in range(len(word) + 1)]\n",
-    "\n",
-    "for i in splits_b:\n",
+    "# same splits, done using a list comprehension\r\n",
+    "splits_b = [(word[:i], word[i:]) for i in range(len(word) + 1)]\r\n",
+    "\r\n",
+    "for i in splits_b:\r\n",
     "    print(i)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('', 'dearz')\n",
+      "('d', 'earz')\n",
+      "('de', 'arz')\n",
+      "('dea', 'rz')\n",
+      "('dear', 'z')\n",
+      "('dearz', '')\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Delete Edit\n",
     "Delete a letter from each string in the `splits` list.\n",
     "<br>\n",
     "What this does is effectivly delete each possible letter from the original word being edited. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
    "source": [
-    "# deletes with a loop\n",
-    "splits = splits_a\n",
-    "deletes = []\n",
-    "\n",
-    "print('word : ', word)\n",
-    "for L,R in splits:\n",
-    "    if R:\n",
+    "# deletes with a loop\r\n",
+    "splits = splits_a\r\n",
+    "deletes = []\r\n",
+    "\r\n",
+    "print('word : ', word)\r\n",
+    "for L,R in splits:\r\n",
+    "    if R:\r\n",
     "        print(L + R[1:], ' <-- delete ', R[0])"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "word :  dearz\n",
+      "earz  <-- delete  d\n",
+      "darz  <-- delete  e\n",
+      "derz  <-- delete  a\n",
+      "deaz  <-- delete  r\n",
+      "dear  <-- delete  z\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "It's worth taking a closer look at how this is excecuting a 'delete'.\n",
     "<br>\n",
     "Taking the first item from the `splits` list :"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
    "source": [
-    "# breaking it down\n",
-    "print('word : ', word)\n",
-    "one_split = splits[0]\n",
-    "print('first item from the splits list : ', one_split)\n",
-    "L = one_split[0]\n",
-    "R = one_split[1]\n",
-    "print('L : ', L)\n",
-    "print('R : ', R)\n",
-    "print('*** now implicit delete by excluding the leading letter ***')\n",
+    "# breaking it down\r\n",
+    "print('word : ', word)\r\n",
+    "one_split = splits[0]\r\n",
+    "print('first item from the splits list : ', one_split)\r\n",
+    "L = one_split[0]\r\n",
+    "R = one_split[1]\r\n",
+    "print('L : ', L)\r\n",
+    "print('R : ', R)\r\n",
+    "print('*** now implicit delete by excluding the leading letter ***')\r\n",
     "print('L + R[1:] : ',L + R[1:], ' <-- delete ', R[0])"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "word :  dearz\n",
+      "first item from the splits list :  ['', 'dearz']\n",
+      "L :  \n",
+      "R :  dearz\n",
+      "*** now implicit delete by excluding the leading letter ***\n",
+      "L + R[1:] :  earz  <-- delete  d\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "So the end result transforms **'dearz'** to **'earz'** by deleting the first character.\n",
     "<br>\n",
     "And you use a **loop** (code block above) or a **list comprehension** (code block below) to do\n",
     "<br>\n",
     "this for the entire `splits` list."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
    "source": [
-    "# deletes with a list comprehension\n",
-    "splits = splits_a\n",
-    "deletes = [L + R[1:] for L, R in splits if R]\n",
-    "\n",
-    "print(deletes)\n",
-    "print('*** which is the same as ***')\n",
-    "for i in deletes:\n",
+    "# deletes with a list comprehension\r\n",
+    "splits = splits_a\r\n",
+    "deletes = [L + R[1:] for L, R in splits if R]\r\n",
+    "\r\n",
+    "print(deletes)\r\n",
+    "print('*** which is the same as ***')\r\n",
+    "for i in deletes:\r\n",
     "    print(i)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['earz', 'darz', 'derz', 'deaz', 'dear']\n",
+      "*** which is the same as ***\n",
+      "earz\n",
+      "darz\n",
+      "derz\n",
+      "deaz\n",
+      "dear\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Ungraded Exercise\n",
     "You now have a list of ***candidate strings*** created after performing a **delete** edit.\n",
@@ -156,32 +221,43 @@
     "So from the above list **earz, darz, derz, deaz, dear**. \n",
     "<br>\n",
     "You're really only interested in **dear**."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
    "source": [
-    "vocab = ['dean','deer','dear','fries','and','coke']\n",
-    "edits = list(deletes)\n",
-    "\n",
-    "print('vocab : ', vocab)\n",
-    "print('edits : ', edits)\n",
-    "\n",
-    "candidates=[]\n",
-    "\n",
-    "### START CODE HERE ###\n",
-    "#candidates = ??  # hint: 'set.intersection'\n",
-    "### END CODE HERE ###\n",
-    "\n",
+    "vocab = ['dean','deer','dear','fries','and','coke']\r\n",
+    "edits = list(deletes)\r\n",
+    "\r\n",
+    "print('vocab : ', vocab)\r\n",
+    "print('edits : ', edits)\r\n",
+    "\r\n",
+    "candidates=[]\r\n",
+    "\r\n",
+    "### START CODE HERE ###\r\n",
+    "#candidates = ??  # hint: 'set.intersection'\r\n",
+    "candidates = set(vocab).intersection(set(edits))\r\n",
+    "### END CODE HERE ###\r\n",
+    "\r\n",
     "print('candidate words : ', candidates)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "vocab :  ['dean', 'deer', 'dear', 'fries', 'and', 'coke']\n",
+      "edits :  ['earz', 'darz', 'derz', 'deaz', 'dear']\n",
+      "candidate words :  {'dear'}\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Expected Outcome:\n",
     "\n",
@@ -190,11 +266,11 @@
     "edits :  ['earz', 'darz', 'derz', 'deaz', 'dear']\n",
     "<br>\n",
     "candidate words :  {'dear'}"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Summary\n",
     "You've unpacked an integral part of the assignment by breaking down **splits** and **edits**, specifically looking at **deletes** here.\n",
@@ -204,14 +280,14 @@
     "This bit of the code isn't as intuitive as other sections, so well done!\n",
     "<br>\n",
     "You should now feel confident facing some of the more technical parts of the assignment at the end of the week."
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.5 64-bit ('deeplearning': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -223,7 +299,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.5"
+  },
+  "interpreter": {
+   "hash": "7bd95233e9c04de4911b7b9dc4f003d669080eb92d324c4c61e0dea7467d7a1b"
   }
  },
  "nbformat": 4,
